--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="display">12067905</div>
+        <div id="display">0</div>
         <button class="number" id="zero">0</button>
         <button class="number" id="one">1</button>
         <button class="number" id="two">2</button>
@@ -23,8 +23,9 @@
 
         <button class="operator" id="add">+</button>
         <button class="operator" id="subtract">-</button>
-        <button class="operator" id="add">×</button>
-        <button class="operator" id="add">÷</button>
+        <button class="operator" id="multiply">×</button>
+        <button class="operator" id="divide">÷</button>
+        <button class="operator" id="equals">=</button>
 
         <button id="clear">Clear</button>
     </div>
