--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <div id="display">0</div>
+      <div id="display">0</div>
+      <div id="buttons">
         <button class="number" id="zero">0</button>
         <button class="number" id="one">1</button>
         <button class="number" id="two">2</button>
@@ -28,6 +29,7 @@
         <button class="operator" id="equals">=</button>
 
         <button id="clear">Clear</button>
+      </div>
     </div>
-</body>
+  </body>
 </html>
